# action-demo

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  WORKFLOWS.md
.claude/: settings.json
.claude/commands/: add-algorithm.md  add-data-structure.md  build.md  pre-commit.md  review-changes.md  test.md
.github/workflows/: ci.yml  code-coverage.yml  codeql.yml  compiler-compatibility.yml  documentation.yml  release.yml
.qoder/quests/: clang-build-workflow-fix.md  data-structure-enhancement.md  fix-workflow-error.md  other-github-action-examples.md
.qoder/specs/cmake-github-actions-demo/: design.md  tasks.md
agent_docs/: adding_features.md  building.md  ci_workflows.md  testing.md
cmake/: CompilerWarnings.cmake  GoogleTest.cmake  Sanitizers.cmake
docs/design/: btreemap_design.md
openspec/: project.md
openspec/changes/optimize-sorting-algorithms/: design.md  proposal.md  tasks.md
openspec/changes/optimize-sorting-algorithms/specs/sorting/: spec.md
src/: calculator.cpp  calculator.h  main.cpp
src/algorithms/: CMakeLists.txt
src/algorithms/include/algorithms/: dp_algorithms.h  search.h  sort.h  string_algorithms.h
src/algorithms/src/: dp_algorithms.cpp  search.cpp  sort.cpp  string_algorithms.cpp
src/cli_tool/: CMakeLists.txt  cli_main.cpp
src/data_structures/: CMakeLists.txt
src/data_structures/include/data_structures/: avl_tree.h  btreemap.h  exceptions.h  heap.h  linked_list.h  skip_list.h  stack_queue.h
src/data_structures/include/data_structures/detail/: container_base.h  validation.h
src/data_structures/src/: avl_tree.cpp  btreemap.cpp  exceptions.cpp  heap.cpp  linked_list.cpp  skip_list.cpp  stack_queue.cpp
src/main_app/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/algorithms/: test_dp_algorithms.cpp  test_search.cpp  test_sort.cpp  test_string_algorithms.cpp
tests/data_structures/: test_avl_tree.cpp  test_btreemap.cpp  test_exceptions.cpp  test_heap.cpp  test_linked_list.cpp  test_move_semantics.cpp  test_skip_list.cpp  test_stack_queue.cpp
